# sn2md-worker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh
docker/obsidian-sync/: Dockerfile  entrypoint.sh
docker/obsidian-sync/root/etc/s6-overlay/s6-rc.d/svc-obsidian-sync/: run
docs/: product-brief.md  technical-brief.md  unraid-runbook.md
scripts/verify/: 01_drive_access.py  02_sn2md_gemini.py  README.md
src/sn2md_worker/: __main__.py  app.py  clock.py  config.py  correlation.py  db.py  logging.py  observability.py  startup_status.py
src/sn2md_worker/conversion/: __init__.py  gemini.py  multi_page.py  paths.py  runner.py
src/sn2md_worker/drive/: __init__.py  client.py  models.py  paths.py  webhook.py
src/sn2md_worker/sources/: __init__.py  models.py  protocol.py
src/sn2md_worker/state/: __init__.py  conversions.py  cursor.py  debounce.py  models.py  page_conversions.py  schema.py  watch_channels.py
src/sn2md_worker/workflows/: CLAUDE.md  __init__.py  backfill.py  convert_note.py  delete_output.py  locks.py  poll_changes.py  queues.py  renew_watch.py
tests/unit/: CLAUDE.md  test_correlation.py  test_logging.py  test_main.py  test_observability.py
tests/unit/conversion/: test_gemini.py  test_multi_page.py  test_paths.py  test_runner.py
tests/unit/drive/: test_client.py  test_models.py  test_paths.py  test_webhook.py
tests/unit/sources/: test_models.py  test_protocol.py
tests/unit/state/: conftest.py  test_conversions.py  test_cursor.py  test_debounce.py  test_page_conversions.py  test_schema.py  test_watch_channels.py
tests/unit/workflows/: test_backfill.py  test_convert_note.py  test_delete_output.py  test_locks.py  test_poll_changes.py  test_registration.py  test_renew_watch.py
